<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@drawable/background_dialog" >

  	<RadioGroup android:id="@+id/trigger_radio_group"
  	    		android:layout_width="wrap_content"
        		android:layout_height="wrap_content">
	    <RadioButton
	        android:id="@+id/time0"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/time0" />
	    
	    <View
			 android:layout_width="fill_parent"
			 android:layout_height="1dp"
			 android:background="#4c4b47"/>
	    
	    <RadioButton
	        android:id="@+id/time1"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/time1" />
	    
	    <View
			 android:layout_width="fill_parent"
			 android:layout_height="1dp"
			 android:background="#4c4b47"/>
	    
	    <RadioButton
	        android:id="@+id/time2"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/time2" />
	    
	    <View
			 android:layout_width="fill_parent"
			 android:layout_height="1dp"
			 android:background="#4c4b47"/>
	    
	    <RadioButton
	        android:id="@+id/time3"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/time3" />
	    
	    <View
			 android:layout_width="fill_parent"
			 android:layout_height="1dp"
			 android:background="#4c4b47"/>
	    
	    <RadioButton
	        android:id="@+id/time4"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/time4" />
	    
	    <View
			 android:layout_width="fill_parent"
			 android:layout_height="1dp"
			 android:background="#4c4b47"/>
	    
	    <RadioButton
	        android:id="@+id/time5"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/time5" />
	    
	</RadioGroup>
    
 	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp" 
        android:background="@drawable/actionbar" >

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/cancel_btn" />
        
        <View
		 android:layout_width="1dp"
		 android:paddingLeft="10dp"
		 android:paddingRight="15dp"
		 android:gravity="center"
		 android:layout_height="fill_parent"
		 android:background="#fbae17" />
        
        <Button
            android:id="@+id/ok_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/set_btn" />

    </LinearLayout>

</LinearLayout>