<?xml version="1.0" encoding="utf-8"?>
    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

	<LinearLayout android:layout_width="fill_parent"
        	      android:layout_height="wrap_content" 
		      	  android:orientation="horizontal"
		      	  android:layout_alignParentBottom="true"
		      	  android:gravity="center_horizontal"
		      	  android:background="@drawable/tabbar">
	
        <Button
            android:id="@+id/training_plan"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/training_tab_both"
            android:background="@android:color/transparent"
            android:paddingTop="2dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/training"
            android:textColor="@drawable/button_text"
            />

	<View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#4c4b47" />

        <Button
            android:id="@+id/song_explorer"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/song_tab_both"
            android:background="@android:color/transparent"
            android:paddingTop="2dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/song_explorer"
            android:textColor="@drawable/button_text"
             />

	<View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#4c4b47" />

        <Button
            android:id="@+id/settings"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/settings_tab_both"
            android:background="@android:color/transparent"
            android:paddingTop="2dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/settings"
            android:textColor="@drawable/button_text"
           />


	<View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:background="#4c4b47" />

        <Button
            android:id="@+id/help"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/help_tab_both"
            android:background="@android:color/transparent"
            android:paddingTop="2dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/help"
            android:textColor="@drawable/button_text"
             />



	</LinearLayout>

	<Button
	    android:id="@+id/start_button"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_centerVertical="true"
	    android:background="@drawable/start_button"
	    android:contentDescription="@string/start_btn_txt"
	    android:gravity="center" />

    </RelativeLayout>